--- a/css/body.css
+++ b/css/body.css
@@ -46,3 +46,176 @@ li {
   border-color: #ab7442 !important;
   transition: all 0.5s ease;
 }
+
+/*** 
+
+====================================================================
+	Page Title
+====================================================================
+
+***/
+
+.page-title {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 50px 0px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.page-title:before {
+  position: absolute;
+  content: "";
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  display: block;
+  /* background-color: #000000; */
+  /* opacity: .60; */
+}
+
+.page-title h1 {
+  position: relative;
+  font-weight: 500;
+  font-size: 70px;
+  line-height: 1.2em;
+  z-index: 99;
+  color: #ffffff;
+  font-family: "PT Serif", serif;
+  margin-bottom: 10px;
+}
+
+.page-title .title {
+  position: relative;
+  display: inline-block;
+  font-size: 22px;
+  line-height: 1em;
+  font-weight: 500;
+  color: #ffffff;
+  margin-bottom: 30px;
+  opacity: 0;
+  /* -webkit-transform: translateY(100px);
+	-moz-transform: translateY(100px);
+	-ms-transform: translateY(100px);
+	-o-transform: translateY(100px);
+	transform: translateY(100px);
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease; */
+  transition: all 500ms ease;
+}
+
+.page-title .title {
+  opacity: 1;
+  /* -webkit-transform: translateY(0);
+	-moz-transform: translateY(0);
+	-ms-transform: translateY(0);
+	-o-transform: translateY(0); */
+  transform: translateY(0);
+}
+
+.page-title .title:before,
+.page-title .title:after {
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  height: 3px;
+  width: 30%;
+  background-color: #ab7442;
+  content: "";
+  margin-left: 30px;
+}
+
+.page-title .title:before {
+  left: auto;
+  right: 100%;
+  margin-right: 30px;
+  margin-left: 0;
+}
+
+/*** 
+
+====================================================================
+		Section Title
+====================================================================
+
+***/
+
+.section{
+  margin: 50px 0px;
+}
+
+.section-title {
+  position: relative;
+  margin-bottom: 60px;
+}
+
+.section-title h2 {
+  position: relative;
+  display: inline-block;
+  font-size: 72px;
+  color: #353535;
+  line-height: 1em;
+  font-weight: 600;
+  color: transparent;
+  cursor: default;
+  -webkit-text-stroke: 1px #353535;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.section-title h2:hover {
+  color: #353535;
+  -webkit-text-stroke: 1px transparent;
+}
+
+.section-title .text {
+  position: relative;
+  display: block;
+  font-size: 18px;
+  line-height: 1.4em;
+  color: #353535;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.section-title p {
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+  display: block;
+  font-size: 18px;
+  line-height: 1.4em;
+  color: #353535;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.section-title .light h2 {
+  -webkit-text-stroke: 1px #ffffff;
+}
+
+.section-title .light h2:hover {
+  color: #ffffff;
+  -webkit-text-stroke: 1px transparent;
+}
+
+.section-title .light h2:before,
+.section-title .light h2:after {
+  background-color: #ffffff;
+}
+
+.section-title .light .text {
+  color: #ffffff;
+}
+
+.nosotros{
+  margin: 50px 0px;
+}
+
+.equipo{
+  margin: 50px 0px;
+}
