--- a/css/body.css
+++ b/css/body.css
@@ -97,24 +97,11 @@ li {
   color: #ffffff;
   margin-bottom: 30px;
   opacity: 0;
-  /* -webkit-transform: translateY(100px);
-	-moz-transform: translateY(100px);
-	-ms-transform: translateY(100px);
-	-o-transform: translateY(100px);
-	transform: translateY(100px);
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease; */
   transition: all 500ms ease;
 }
 
 .page-title .title {
   opacity: 1;
-  /* -webkit-transform: translateY(0);
-	-moz-transform: translateY(0);
-	-ms-transform: translateY(0);
-	-o-transform: translateY(0); */
   transform: translateY(0);
 }
 
@@ -145,7 +132,7 @@ li {
 
 ***/
 
-.section{
+.section {
   margin: 50px 0px;
 }
 
@@ -212,10 +199,86 @@ li {
   color: #ffffff;
 }
 
-.nosotros{
+.nosotros {
   margin: 50px 0px;
 }
 
-.equipo{
+.equipo {
   margin: 50px 0px;
+}
+
+.contratacion h2 {
+  position: relative;
+  margin-bottom: 35px;
+}
+.contratacion h2::after {
+  content: "";
+  width: 120px;
+  height: 3px;
+  display: inline-block;
+  background: #ffc107;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: -20px;
+  margin: 0 auto;
+}
+
+.contratacion .box {
+  padding: 50px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.5s;
+  position: relative;
+  background-color: #333;
+  height: 280px;
+  max-height: 280px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
+.contratacion .box:hover {
+  padding: 30px 30px 70px 30px;
+  box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.contratacion .box img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index: -1;
+  opacity: 0;
+  transition: all ease 1s;
+}
+.contratacion .box:hover img {
+  opacity: 1;
+}
+.contratacion .box span {
+  display: block;
+  font-size: 56px;
+  font-weight: 700;
+  color: #6b6060;
+  position: absolute;
+  right: 10px;
+  top: 0px;
+  line-height: normal;
+}
+.contratacion .box h4 a {
+  font-size: 24px;
+  font-weight: 600;
+  padding: 0;
+  margin: 20px 0;
+  color: #dadada;
+  text-decoration: none;
+}
+.contratacion .box p {
+  color: #aaaaaa;
+  font-size: 15px;
+  margin: 0;
+  padding: 0;
+}
+.contratacion .box:hover span,
+.contratacion .box:hover h4 a,
+.contratacion .box:hover p {
+  color: #fff;
 }
