--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,14 @@
 
 @import url(carousel.css);
 
-
 @import url(footer.css);
-
 
 @import url(responsive.css);
 
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap'); */
-@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap");
 
 @font-face {
-    font-family: 'PPWoodland';
-    src: url('../assets/font/PPWoodland-Bold.otf') format('woff2');
-  }
+  font-family: "PPWoodland";
+  src: url("../assets/font/PPWoodland-Bold.otf") format("woff2");
+}
