--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,6 @@
-$main-text-color: #353535;
-$main-text-color-alt: #ab7442;
+$main-color-primary: #ffffff;
+$main-color-alt: #ab7442;
+
 $footer-text-color: azure;
 $footer-text-color-alt: azure;
 $main-font-family:"Didact Gothic", sans-serif;
