--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap";
 
+@import 'base/variables';
 
 @import 'components/body';
 @import 'components/carousel';
