--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 @import "https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap";
+@import "https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap";
 @font-face {
   font-family: "PPWoodland";
   src: url("../assets/font/PPWoodland-Bold.otf") format("woff2");
 }
+/*** BOTONES ***/
+/*** TITULOS ***/
+/*** TITULOS SECCIONES ***/
+/*** TARJETA CONTRATACION ***/
 * {
   margin: 0px;
   padding: 0px;
@@ -16,10 +21,9 @@ body {
   color: #353535;
   line-height: 28px;
   font-weight: 400;
-  background: #ffffff;
+  background-color: #f8f9fa;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
-  /* font-family: 'Montserrat Alternates', sans-serif; */
   font-family: "Montserrat", sans-serif;
 }
 
@@ -29,21 +33,24 @@ a {
   color: #ab7442;
 }
 
-ul,
+ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
 li {
   list-style: none;
   padding: 0px;
   margin: 0px;
 }
 
-/* BOTONES */
 .btn-theme {
   background-color: #ab7442 !important;
   color: #ffffff !important;
   border-color: #ab7442 !important;
   transition: all 0.5s ease;
 }
-
 .btn-theme:hover {
   background-color: #ffffff !important;
   color: #ab7442 !important;
@@ -51,13 +58,21 @@ li {
   transition: all 0.5s ease;
 }
 
-/*** 
+.img-corners {
+  border-radius: 25px;
+}
 
-====================================================================
- Page Title
-====================================================================
+.global-text {
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+  display: block;
+  font-size: 18px;
+  line-height: 1.4em;
+  color: #353535;
+  font-weight: 400;
+  margin-top: 20px;
+}
 
-***/
 .page-title {
   position: relative;
   background-size: cover;
@@ -67,7 +82,6 @@ li {
   text-align: center;
   margin-bottom: 20px;
 }
-
 .page-title:before {
   position: absolute;
   content: "";
@@ -76,10 +90,7 @@ li {
   width: 100%;
   height: 100%;
   display: block;
-  /* background-color: #000000; */
-  /* opacity: .60; */
 }
-
 .page-title h2 {
   position: relative;
   font-weight: 500;
@@ -90,7 +101,6 @@ li {
   font-family: "PT Serif", serif;
   margin-bottom: 10px;
 }
-
 .page-title .title {
   position: relative;
   display: inline-block;
@@ -101,14 +111,23 @@ li {
   margin-bottom: 30px;
   opacity: 0;
   transition: all 500ms ease;
-}
-
-.page-title .title {
   opacity: 1;
   transform: translateY(0);
 }
-
-.page-title .title:before,
+.page-title .title:before {
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  height: 3px;
+  width: 30%;
+  background-color: #ab7442;
+  content: "";
+  margin-left: 30px;
+  left: auto;
+  right: 100%;
+  margin-right: 30px;
+  margin-left: 0;
+}
 .page-title .title:after {
   position: absolute;
   left: 100%;
@@ -120,20 +139,6 @@ li {
   margin-left: 30px;
 }
 
-.page-title .title:before {
-  left: auto;
-  right: 100%;
-  margin-right: 30px;
-  margin-left: 0;
-}
-
-/*** 
-
-====================================================================
-  Section Title
-====================================================================
-
-***/
 .section {
   margin: 50px 0px;
 }
@@ -142,7 +147,6 @@ li {
   position: relative;
   margin-bottom: 60px;
 }
-
 .section-title h2 {
   position: relative;
   display: inline-block;
@@ -156,12 +160,10 @@ li {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-
 .section-title h2:hover {
   color: #353535;
   -webkit-text-stroke: 1px transparent;
 }
-
 .section-title .text {
   position: relative;
   display: block;
@@ -171,7 +173,6 @@ li {
   font-weight: 400;
   margin-top: 20px;
 }
-
 .section-title p {
   font-family: "Montserrat", sans-serif;
   position: relative;
@@ -182,21 +183,19 @@ li {
   font-weight: 400;
   margin-top: 20px;
 }
-
 .section-title .light h2 {
   -webkit-text-stroke: 1px #ffffff;
 }
-
 .section-title .light h2:hover {
   color: #ffffff;
   -webkit-text-stroke: 1px transparent;
 }
-
-.section-title .light h2:before,
+.section-title .light h2:before {
+  background-color: #ffffff;
+}
 .section-title .light h2:after {
   background-color: #ffffff;
 }
-
 .section-title .light .text {
   color: #ffffff;
 }
@@ -213,39 +212,46 @@ li {
   position: relative;
   margin-bottom: 35px;
 }
-
 .contratacion h2::after {
   content: "";
   width: 120px;
   height: 3px;
   display: inline-block;
-  background: #ffc107;
   position: absolute;
   left: 0px;
   right: 0px;
   bottom: -20px;
   margin: 0 auto;
 }
-
 .contratacion .box {
-  padding: 50px 30px;
+  padding: 40px 30px 40px 30px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   transition: 0.5s;
   position: relative;
   background-color: #333;
-  height: 280px;
-  max-height: 280px;
+  height: 300px;
+  max-height: 300px;
   overflow: hidden;
   margin-bottom: 30px;
   border-radius: 10px;
 }
-
 .contratacion .box:hover {
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0.3);
 }
-
+.contratacion .box:hover img {
+  opacity: 1;
+}
+.contratacion .box:hover span {
+  color: #fff;
+}
+.contratacion .box:hover h4 a {
+  color: #fff;
+}
+.contratacion .box:hover p {
+  color: #fff;
+}
 .contratacion .box img {
   position: absolute;
   top: 0px;
@@ -255,42 +261,29 @@ li {
   opacity: 0;
   transition: all ease 1s;
 }
-
-.contratacion .box:hover img {
-  opacity: 1;
-}
-
 .contratacion .box span {
   display: block;
   font-size: 56px;
   font-weight: 700;
-  color: #6b6060;
+  color: #0f0d0d;
   position: absolute;
   right: 10px;
   top: 0px;
   line-height: normal;
 }
-
-.contratacion .box h4 a {
+.contratacion .box h4 {
   font-size: 24px;
   font-weight: 600;
   padding: 0;
   margin: 20px 0;
-  color: #dadada;
+  color: #ffffff;
   text-decoration: none;
 }
-
 .contratacion .box p {
-  color: #aaaaaa;
+  color: #ffffff;
   font-size: 15px;
   margin: 0;
   padding: 0;
-}
-
-.contratacion .box:hover span,
-.contratacion .box:hover h4 a,
-.contratacion .box:hover p {
-  color: #fff;
 }
 
 /* Declare heights because of positioning of img element */
@@ -300,7 +293,7 @@ li {
 }
 
 .carousel-inner {
-  background-color: #353535;
+  background-image: url("../assets/img/title_bg.jpg");
 }
 
 .carousel-item {
