--- a/scss/components/_body.scss
+++ b/scss/components/_body.scss
@@ -1,67 +1,70 @@
+@import "https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Poppins:300,400,500,600,700i,900|Montserrat:300,400,500,600,700&display=swap";
 @font-face {
 	font-family: "PPWoodland";
 	src: url("../assets/font/PPWoodland-Bold.otf") format("woff2");
 }
-
-
+/*** BOTONES ***/
+/*** TITULOS ***/
+/*** TITULOS SECCIONES ***/
+/*** TARJETA CONTRATACION ***/
 * {
 	margin: 0px;
 	padding: 0px;
 	border: none;
 	outline: none;
 	font-size: 100%;
-  }
-  
-  body {
+}
+body {
 	font-size: 14px;
 	color: #353535;
 	line-height: 28px;
 	font-weight: 400;
-	background: #ffffff;
+	background-color: #f8f9fa;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
-	/* font-family: 'Montserrat Alternates', sans-serif; */
 	font-family: "Montserrat", sans-serif;
-  }
-  
-  a {
+}
+a {
 	text-decoration: none;
 	cursor: pointer;
-	color: $main-color-alt;
-  }
-  
-  ul,
-  li {
+	color: #ab7442;
+}
+ul {
 	list-style: none;
 	padding: 0px;
 	margin: 0px;
-  }
-  
-  /* BOTONES */
-  
-  .btn-theme {
+}
+li {
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
+}
+.btn-theme {
 	background-color: #ab7442 !important;
-	color: $main-color-primary !important;
+	color: #ffffff !important;
 	border-color: #ab7442 !important;
 	transition: all 0.5s ease;
-  }
-  
-  .btn-theme:hover {
-	background-color: #ffffff !important;
-	color: $main-color-alt !important;
-	border-color: #ab7442 !important;
-	transition: all 0.5s ease;
-  }
-  
-  /*** 
-  
-  ====================================================================
-	  Page Title
-  ====================================================================
-  
-  ***/
-  
-  .page-title {
+	&:hover {
+		background-color: #ffffff !important;
+		color: #ab7442 !important;
+		border-color: #ab7442 !important;
+		transition: all 0.5s ease;
+	}
+}
+.img-corners {
+	border-radius: 25px;
+}
+.global-text {
+	font-family: "Montserrat", sans-serif;
+	position: relative;
+	display: block;
+	font-size: 18px;
+	line-height: 1.4em;
+	color: #353535;
+	font-weight: 400;
+	margin-top: 20px;
+}
+.page-title {
 	position: relative;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -69,223 +72,208 @@
 	padding: 50px 0px;
 	text-align: center;
 	margin-bottom: 20px;
-  }
-  
-  .page-title:before {
-	position: absolute;
-	content: "";
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	display: block;
-	/* background-color: #000000; */
-	/* opacity: .60; */
-  }
-  
-  .page-title h2 {
-	position: relative;
-	font-weight: 500;
-	font-size: 70px;
-	line-height: 1.2em;
-	z-index: 99;
-	color: $main-color-primary;
-	font-family: "PT Serif", serif;
-	margin-bottom: 10px;
-  }
-  
-  .page-title .title {
-	position: relative;
-	display: inline-block;
-	font-size: 22px;
-	line-height: 1em;
-	font-weight: 500;
-	color: $main-color-primary;
-	margin-bottom: 30px;
-	opacity: 0;
-	transition: all 500ms ease;
-  }
-  
-  .page-title .title {
-	opacity: 1;
-	transform: translateY(0);
-  }
-  
-  .page-title .title:before,
-  .page-title .title:after {
-	position: absolute;
-	left: 100%;
-	top: 50%;
-	height: 3px;
-	width: 30%;
-	background-color: #ab7442;
-	content: "";
-	margin-left: 30px;
-  }
-  
-  .page-title .title:before {
-	left: auto;
-	right: 100%;
-	margin-right: 30px;
-	margin-left: 0;
-  }
-  
-  /*** 
-  
-  ====================================================================
-		  Section Title
-  ====================================================================
-  
-  ***/
-  
-  .section {
+	&:before {
+		position: absolute;
+		content: "";
+		left: 0px;
+		top: 0px;
+		width: 100%;
+		height: 100%;
+		display: block;
+	}
+	h2 {
+		position: relative;
+		font-weight: 500;
+		font-size: 70px;
+		line-height: 1.2em;
+		z-index: 99;
+		color: #ffffff;
+		font-family: "PT Serif", serif;
+		margin-bottom: 10px;
+	}
+	.title {
+		position: relative;
+		display: inline-block;
+		font-size: 22px;
+		line-height: 1em;
+		font-weight: 500;
+		color: #ffffff;
+		margin-bottom: 30px;
+		opacity: 0;
+		transition: all 500ms ease;
+		opacity: 1;
+		transform: translateY(0);
+		&:before {
+			position: absolute;
+			left: 100%;
+			top: 50%;
+			height: 3px;
+			width: 30%;
+			background-color: #ab7442;
+			content: "";
+			margin-left: 30px;
+			left: auto;
+			right: 100%;
+			margin-right: 30px;
+			margin-left: 0;
+		}
+		&:after {
+			position: absolute;
+			left: 100%;
+			top: 50%;
+			height: 3px;
+			width: 30%;
+			background-color: #ab7442;
+			content: "";
+			margin-left: 30px;
+		}
+	}
+}
+.section {
 	margin: 50px 0px;
-  }
-  
-  .section-title {
+}
+.section-title {
 	position: relative;
 	margin-bottom: 60px;
-  }
-  
-  .section-title h2 {
-	position: relative;
-	display: inline-block;
-	font-size: 50px;
-	color: #353535;
-	line-height: 1em;
-	font-weight: 600;
-	color: transparent;
-	cursor: default;
-	-webkit-text-stroke: 1px #353535;
-	-webkit-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-  }
-  
-  .section-title h2:hover {
-	color: #353535;
-	-webkit-text-stroke: 1px transparent;
-  }
-  
-  .section-title .text {
-	position: relative;
-	display: block;
-	font-size: 18px;
-	line-height: 1.4em;
-	color: #353535;
-	font-weight: 400;
-	margin-top: 20px;
-  }
-  
-  .section-title p {
-	font-family: "Montserrat", sans-serif;
-	position: relative;
-	display: block;
-	font-size: 18px;
-	line-height: 1.4em;
-	color: #353535;
-	font-weight: 400;
-	margin-top: 20px;
-  }
-  
-  .section-title .light h2 {
-	-webkit-text-stroke: 1px #ffffff;
-  }
-  
-  .section-title .light h2:hover {
-	color: $main-color-primary;
-	-webkit-text-stroke: 1px transparent;
-  }
-  
-  .section-title .light h2:before,
-  .section-title .light h2:after {
-	background-color: #ffffff;
-  }
-  
-  .section-title .light .text {
-	color: $main-color-primary;
-  }
-  
-  .nosotros {
+	h2 {
+		position: relative;
+		display: inline-block;
+		font-size: 50px;
+		color: #353535;
+		line-height: 1em;
+		font-weight: 600;
+		color: transparent;
+		cursor: default;
+		-webkit-text-stroke: 1px #353535;
+		-webkit-transition: all 0.2s ease-in-out;
+		transition: all 0.2s ease-in-out;
+		&:hover {
+			color: #353535;
+			-webkit-text-stroke: 1px transparent;
+		}
+	}
+	.text {
+		position: relative;
+		display: block;
+		font-size: 18px;
+		line-height: 1.4em;
+		color: #353535;
+		font-weight: 400;
+		margin-top: 20px;
+	}
+	p {
+		font-family: "Montserrat", sans-serif;
+		position: relative;
+		display: block;
+		font-size: 18px;
+		line-height: 1.4em;
+		color: #353535;
+		font-weight: 400;
+		margin-top: 20px;
+	}
+	.light {
+		h2 {
+			-webkit-text-stroke: 1px #ffffff;
+			&:hover {
+				color: #ffffff;
+				-webkit-text-stroke: 1px transparent;
+			}
+			&:before {
+				background-color: #ffffff;
+			}
+			&:after {
+				background-color: #ffffff;
+			}
+		}
+		.text {
+			color: #ffffff;
+		}
+	}
+}
+.nosotros {
 	margin: 50px 0px;
-  }
-  
-  .equipo {
+}
+.equipo {
 	margin: 50px 0px;
-  }
-  
-  .contratacion h2 {
-	position: relative;
-	margin-bottom: 35px;
-  }
-  .contratacion h2::after {
-	content: "";
-	width: 120px;
-	height: 3px;
-	display: inline-block;
-	background: #ffc107;
-	position: absolute;
-	left: 0px;
-	right: 0px;
-	bottom: -20px;
-	margin: 0 auto;
-  }
-  
-  .contratacion .box {
-	padding: 50px 30px;
-	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-	transition: 0.5s;
-	position: relative;
-	background-color: #333;
-	height: 280px;
-	max-height: 280px;
-	overflow: hidden;
-	margin-bottom: 30px;
-	border-radius: 10px;
-  }
-  .contratacion .box:hover {
-	padding: 30px 30px 70px 30px;
-	box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.2);
-	background-color: rgba(0, 0, 0, 0.3);
-  }
-  .contratacion .box img {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	z-index: -1;
-	opacity: 0;
-	transition: all ease 1s;
-  }
-  .contratacion .box:hover img {
-	opacity: 1;
-  }
-  .contratacion .box span {
-	display: block;
-	font-size: 56px;
-	font-weight: 700;
-	color: #6b6060;
-	position: absolute;
-	right: 10px;
-	top: 0px;
-	line-height: normal;
-  }
-  .contratacion .box h4 a {
-	font-size: 24px;
-	font-weight: 600;
-	padding: 0;
-	margin: 20px 0;
-	color: #dadada;
-	text-decoration: none;
-  }
-  .contratacion .box p {
-	color: #aaaaaa;
-	font-size: 15px;
-	margin: 0;
-	padding: 0;
-  }
-  .contratacion .box:hover span,
-  .contratacion .box:hover h4 a,
-  .contratacion .box:hover p {
-	color: #fff;
-  }
-  
+}
+.contratacion {
+	h2 {
+		position: relative;
+		margin-bottom: 35px;
+		&::after {
+			content: "";
+			width: 120px;
+			height: 3px;
+			display: inline-block;
+			position: absolute;
+			left: 0px;
+			right: 0px;
+			bottom: -20px;
+			margin: 0 auto;
+		}
+	}
+	.box {
+		padding: 40px 30px 40px 30px;
+		box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+		transition: 0.5s;
+		position: relative;
+		background-color: #333;
+		height: 300px;
+		max-height: 300px;
+		overflow: hidden;
+		margin-bottom: 30px;
+		border-radius: 10px;
+		&:hover {
+			padding: 30px 30px 70px 30px;
+			box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.2);
+			background-color: rgba(0, 0, 0, 0.3);
+			img {
+				opacity: 1;
+			}
+			span {
+				color: #fff;
+			}
+			h4 {
+				a {
+					color: #fff;
+				}
+			}
+			p {
+				color: #fff;
+			}
+		}
+		img {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			z-index: -1;
+			opacity: 0;
+			transition: all ease 1s;
+		}
+		span {
+			display: block;
+			font-size: 56px;
+			font-weight: 700;
+			color: #0f0d0d;
+			position: absolute;
+			right: 10px;
+			top: 0px;
+			line-height: normal;
+		}
+		h4 {
+			font-size: 24px;
+			font-weight: 600;
+			padding: 0;
+			margin: 20px 0;
+			color: #ffffff;
+			text-decoration: none;
+		}
+		p {
+			color: #ffffff;
+			font-size: 15px;
+			margin: 0;
+			padding: 0;
+		}
+	}
+}
